fix - add button color on dark mode

--- a/packages/apps/frontend/src/index.css
+++ b/packages/apps/frontend/src/index.css
@@ -24,12 +24,13 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
